--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>REPOSITORIO</title>
+    <title>MI PRIMERA PAGINA</title>
 </head>
 <body>
-    
+    <h1>Clase de lenguaje para el desarrollo</h1>
+    <p>Primera clase</p>
+    <p>Sigo pensando que puedo hacer</p>
+<p>Llegaremos a la meta?</p>
+<br>
+<br>
+<br>
+<h2>PARTE2</h2>
+<img src="/Goku-consiguio-desbloquear-el-poder-de-un-Dios-mucho-antes-de-Dragon-Ball-Super.jpg" alt="">
 </body>
 </html>
