--- a/s5/Cap2S5/2da.clas.html
+++ b/s5/Cap2S5/2da.clas.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Selectores combinados</title>
-    <link rel="stylesheet" href="./css/combinados.css">
+    <link rel="stylesheet" href="./2da.clas.css">
 </head>
 <body>
     <header class="contenedor">
